# resistor-builder

./: README.md  build.cabal  build.sh
app/: Main.hs
src/: Main.hs  Resistor.hs  ResistorBuilder.hs  Sample.hs
test/: ResistorTest.hs  SampleTest.hs
