Name:               resistorBuilder
Version:            2.0.0
cabal-version:      >= 1.8
build-type:         Simple

Library
  Exposed-Modules:  Main
  hs-source-dirs:   src
  Build-Depends:    base >= 4.11 && < 5
                  , containers

Test-Suite sample-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  Main-is:          ResistorTest.hs
  other-modules:    ResistorBuilder
  Build-Depends:    base >= 4.11 && < 5
                  , containers
                  , tasty
                  , tasty-hunit
                  , resistorBuilder
