Name:               resistorBuilder
Version:            2.0.0
cabal-version:      >= 1.10
build-type:         Simple

Library
  Main-is:          ResistorBuilder.hs
  hs-source-dirs:   src
  Exposed-Modules:  ResistorBuilder
  Build-Depends:    base >= 4.11 && < 5
                  , containers

Executable resistorBuilder
  Main-is:          Main.hs
  hs-source-dirs:   app
  Default-Language: Haskell2010
  Build-Depends:    base >= 4.11 && < 5
                  , containers
                  , resistorBuilder

Test-Suite builder-tests
  Main-is:          ResistorTest.hs
  hs-source-dirs:   test, src
  type:             exitcode-stdio-1.0
  Build-Depends:    base >= 4.11 && < 5
                  , containers
                  , tasty
                  , tasty-hunit
                  , resistorBuilder
